2007-03-19 Yen-Ju Chen <yjchenx at gmail>
	
	* Try to catch exception from NSConnection.

2007-03-18 Yen-Ju Chen <yjchenx at gmail>

	* Use WorkspaceCommKit if building with etoile.

2007-03-17 Yen-Ju Chen <yjchenx at gmail>

	* Add TrashCan in blacklist.
	* Put a note on how to prevent GWorkspace from launching automatically.

2007-03-15 Yen-Ju Chen <yjchenx at gmail>

	* Add TODO in README.

2007-03-14 Yen-Ju Chen <yjchenx at gmail>

	* Fix ghost state after moving it to AZDockView.
	* Since NSWorkspace is not reliable, check the existance of 
          application through NSConnection.

2007-03-12 Yen-Ju Chen <yjchenx at gmail>

	* Make sure the icon is on top of normal window.
	* Use small triangle to indicate running application.
	* Make sure the mouse is released inside the dock.
	* Put Azalea into blacklist.

2007-03-03 Yen-Ju Chen <yjchenx at gmail>

	* Check GNUstep app icon and move it out of sight.

2007-03-01 Yen-Ju Chen <yjchenx at gmail>

	* Implement launching state with yellow backgroud.
	* Implement 'remove from dock' function.
	* Save docked applications.
	* Combine "keep in dock" and "remove from dock" menu.
	* Cache icon images for docked applications.

2007-02-28 Yen-Ju Chen <yjchenx at gmail>

	* Use NSWorkspace to track GNUstep applications
          and Azalea to track XWindow windows.
          Hope to make it more simple and stable.
	* Clean up and recover workspace switcher.

2006-12-17 Yen-Ju Chen <yjchenx at gmail>

	* Initial support for keeping application in dock.
	* Avoid crash if command is not found.
	* Fix firefox because it is under special directory.
	* Put etoile_system, EtoileMenuServer and AZBackground in blacklist.
	* Make sure icon is properly retained.
	* Avoid AZDock window through blacklist.
	* Fix bug of launching GNUstep application. 
          [NSWorkspace launchApplication:] does not always work.

2006-12-16 Yen-Ju Chen <yjchenx at gmail>

	* Avoid gnustep windows other than regular window, main menu and doc.