@@ -2,6 +2,8 @@
 #import <XWindowServerKit/XWindow.h>
 #import "AZDockView.h"
 
+#define DOCK_SIZE 64
+
 typedef enum _AZDockType {
   AZDockGNUstepApplication,
   AZDockXWindowApplication,
