@@ -1,3 +1,7 @@
+2007-04-01 Yen-Ju Chen <yjchenx at gmail>
+
+	* AZDockletApp: Experimentally support WindowMaker docklet
+
 2007-03-19 Yen-Ju Chen <yjchenx at gmail>
 	
 	* Try to catch exception from NSConnection.
